--- a/FireBaseDemo/src/css/user_profile.css
+++ b/FireBaseDemo/src/css/user_profile.css
@@ -64,7 +64,7 @@ body {
 
 @font-face {
     font-family: NotoSansTC-Regular;
-    src: url(FireBaseDemo\src\font\NotoSansTC-Regular.otf);
+    src: url(https://qi-xiang.github.io/NCU_Project_Demo/FireBaseDemo/src/font/NotoSansTC-Regular.otf);
 }
 
 @media (min-width: 1439px) {
@@ -97,7 +97,7 @@ body {
     height: 20px;
     display: inline-block;
     /* Change path to image*/
-    background-image: url(FireBaseDemo\src\jquery-ui-1.13.1.custom\images\ui-icons_777777_256x240.png);
+    background-image: url(https://qi-xiang.github.io/NCU_Project_Demo/FireBaseDemo/src/jquery-ui-1.13.1.custom/images/ui-icons_777777_256x240.png);
     background-position: -96px -128px;
     background-repeat: no-repeat;
     overflow: hidden;
