Updated. 2022/7/10 抹茶狼畢業快樂，穩妥LA~

--- a/FireBaseDemo/src/css/user_profile.css
+++ b/FireBaseDemo/src/css/user_profile.css
@@ -64,7 +64,7 @@ body {
 
 @font-face {
     font-family: NotoSansTC-Regular;
-    src: url(https://qi-xiang.github.io/NCU_Project_Demo/FireBaseDemo/src/font/NotoSansTC-Regular.otf);
+    src: url(../font/NotoSansTC-Regular.otf);
 }
 
 @media (min-width: 1439px) {
