--- a/FireBaseDemo/src/css/user_profile.css
+++ b/FireBaseDemo/src/css/user_profile.css
@@ -111,3 +111,12 @@ a {
 a:hover {
     cursor: pointer;
 }
+
+.snowflake {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background: linear-gradient(white, white);
+    border-radius: 50%;
+    filter: drop-shadow(0 0 10px white);
+}
