--- a/FireBaseDemo/src/css/user_profile.css
+++ b/FireBaseDemo/src/css/user_profile.css
@@ -120,3 +120,12 @@ a:hover {
     border-radius: 50%;
     filter: drop-shadow(0 0 10px white);
 }
+
+div#nav{
+    display: flex;
+    justify-content: center;
+}
+
+div#nav a.active{
+    background-color: #d1d1d1;
+}
