--- a/FireBaseDemo/src/css/user_profile.css
+++ b/FireBaseDemo/src/css/user_profile.css
@@ -246,3 +246,47 @@ a.disabled {
         text-align: center;
     }
 }
+
+/*通用區塊設定*/
+.common-section{
+    padding-top: 24px;
+    padding-bottom:8px;
+}
+
+.padding-0{
+    padding: 0 !important;
+}
+
+.opacity-0{
+    opacity: 0;
+}
+
+.section-title{
+    text-align: center;
+    font-size:32px;
+}
+
+.section-description{
+    text-align: center;
+    color: #777;
+}
+
+.section-divider{
+    border-top: 2px solid #222F33;
+    width: 100px;
+}
+
+tspan{
+    font-size: 11px;
+}
+
+#btn-back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+    z-index: 999;
+    background-color: #1dc8cd;
+    opacity: 0.7;
+    border: none;
+}
