--- a/FireBaseDemo/src/css/login_seperation.css
+++ b/FireBaseDemo/src/css/login_seperation.css
@@ -104,3 +104,14 @@ body{
         font-size: 16px;
     }
 } 
+
+#btn-back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+    z-index: 999;
+    background-color: #1dc8cd;
+    opacity: 0.7;
+    border: none;
+}
